--- a/src/content/docs/letter/146.mdx
+++ b/src/content/docs/letter/146.mdx
@@ -26,7 +26,7 @@ Thursday, Feb. 22
 
 Since this letter was started we received your letter of joy on seeing a little light in your seemingly dark situation. Glory be to God for that! But don’t let it make you light-headed, as many trials are yet in store for you! Spiritually rejoice, and use God’s gifts to you for spiritual profit; but be prepared for whatever the devil will send you next. And rejoice also that you have trials, which prove that spiritual life still exists and that there is hope even for the wildest dream, if it is dreamed with real hope in God!
 
-On Tuesday morning Vl. A. himself paid us a surprise visit, together with our starets, Fr. Spy- ridon, and Deacon Nicholas Porshnikov. Glory be to God, we received Holy Communion, for which we are grateful to Vl. But afterwards we had a talk—which revealed, despite our almost tearful entreaty, that he does not understand not only us, but any of the young idealistic priests or monks, and talks a totally different language, fitting everything into a set “Synodal” pattern. Alas, he will be presiding over empty parishes without priests in a very short time. How many of the young zealots will survive if such attitudes continue at the top? Nonetheless, precisely because the situation seems so hopeless, let us hope in the Lord and continue on the path God has given us—to love the desert- dwellers and keep the desert in our hearts.
+On Tuesday morning Vl. A. himself paid us a surprise visit, together with our starets, Fr. Spyridon, and Deacon Nicholas Porshnikov. Glory be to God, we received Holy Communion, for which we are grateful to Vl. But afterwards we had a talk—which revealed, despite our almost tearful entreaty, that he does not understand not only us, but any of the young idealistic priests or monks, and talks a totally different language, fitting everything into a set “Synodal” pattern. Alas, he will be presiding over empty parishes without priests in a very short time. How many of the young zealots will survive if such attitudes continue at the top? Nonetheless, precisely because the situation seems so hopeless, let us hope in the Lord and continue on the path God has given us—to love the desert- dwellers and keep the desert in our hearts.
 
 Different subject: so you are a “peacemaker?” Where do you get your license? Don’t you realize that in such a role you will begin to get answers that the other party thinks you “expect”? If there are misunderstandings, it is better not to think you can “patch them up,” but rather just don’t get involved in them yourself. About the “Shroud,” Alexey just plain made a mistake, and he got it pretty hard from us for it too. The “Greeks” also made a mistake, however, in making such a big issue of this and beating people over the head just because they don’t agree with a certain opinion. That hurt Alexey, but it was also extremely good for him spiritually. At present he seems to be at peace with everyone as far as we can see. As for the angry exchange of letters with John Johnstone some months ago, we cant comment, not having seen them, but we know Alexey is upset at having written in this tone, but after all it is Dr. Johnstone who refuses to continue the correspondence, and not Alexey, who deep down is a very loving and meek and forgiving person. In the time ahead the devil will be using every chance to get true Orthodox Christians upset at each other over matter big and (mostly) small. We must firmly try not to take the bait, but [page ends]
 
